add denver png fire truck

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <p>Fire stations, food stores, and community programs are just some of the civic services available in Denver. Being a major metropolitan area,
       the city boasts an extensive selection of after school programs throughout. Also available are an abundance of food stores and fire stations
       placed strategically around the city.</p>
-      <img src="http://www.10-75.net/imagesxi/DSC_3824.jpg" alt="Fire Engine"
+      <img src="graphics/fire-engine.jpg" alt="Fire Engine"
       class="img-fill"><br>
       Denver Fire Department Engine: 
       <a href="https://www.denvergov.org/content/denvergov/en/fire-department-home/contact-us/fire-stations.html">Denver Fire Department</a><br>
